// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuView Animation should be disabled if any top placement is provided 1`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-bottom: 4px;
}

<MenuView
  placement="top"
>
  <MenuView__MenuWrapper
    placement="top"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="top"
      >
        <ul
          className="c-menu c-menu--up c-arrow--b c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Animation should be disabled if any top placement is provided 2`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-bottom: 4px;
}

<MenuView
  placement="top-start"
>
  <MenuView__MenuWrapper
    placement="top-start"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="top-start"
      >
        <ul
          className="c-menu c-menu--up c-arrow--bl c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Animation should be disabled if any top placement is provided 3`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-bottom: 4px;
}

<MenuView
  placement="top-end"
>
  <MenuView__MenuWrapper
    placement="top-end"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="top-end"
      >
        <ul
          className="c-menu c-menu--up c-arrow--br c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Animation should be disabled in animation is disabled 1`] = `
.c0.c0 {
  position: relative;
}

.c0:focus {
  outline: none;
}

<MenuView
  animate={false}
>
  <MenuView__MenuWrapper>
    <div
      className=""
    >
      <MenuView__StyledMenuView
        animate={false}
      >
        <ul
          className="c-menu c0"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Animation should be enabled if animation is provided 1`] = `
.c0.c0 {
  position: relative;
}

.c0:focus {
  outline: none;
}

<MenuView
  animate={true}
>
  <MenuView__MenuWrapper>
    <div
      className=""
    >
      <MenuView__StyledMenuView
        animate={true}
      >
        <ul
          className="c-menu is-open c0"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow does not render if arrow prop is not provided 1`] = `
.c0.c0 {
  position: relative;
}

.c0:focus {
  outline: none;
}

<MenuView>
  <MenuView__MenuWrapper>
    <div
      className=""
    >
      <MenuView__StyledMenuView>
        <ul
          className="c-menu c0"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow does not render if placement is not supported 1`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-left: 4px;
}

<MenuView
  arrow={true}
  placement="right-start"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="right-start"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="right-start"
      >
        <ul
          className="c-menu c-menu--right c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 1`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-right: 8px;
}

<MenuView
  arrow={true}
  placement="left"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="left"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="left"
      >
        <ul
          className="c-menu c-menu--left c-arrow c-arrow--r c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 2`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-bottom: 8px;
}

<MenuView
  arrow={true}
  placement="top"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="top"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="top"
      >
        <ul
          className="c-menu c-menu--up c-arrow c-arrow--b c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 3`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-bottom: 8px;
}

<MenuView
  arrow={true}
  placement="top-start"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="top-start"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="top-start"
      >
        <ul
          className="c-menu c-menu--up c-arrow c-arrow--bl c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 4`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-bottom: 8px;
}

<MenuView
  arrow={true}
  placement="top-end"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="top-end"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="top-end"
      >
        <ul
          className="c-menu c-menu--up c-arrow c-arrow--br c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 5`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-left: 8px;
}

<MenuView
  arrow={true}
  placement="right"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="right"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="right"
      >
        <ul
          className="c-menu c-menu--right c-arrow c-arrow--l c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 6`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-top: 8px;
}

<MenuView
  arrow={true}
  placement="bottom"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="bottom"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="bottom"
      >
        <ul
          className="c-menu c-menu--down c-arrow c-arrow--t c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 7`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-top: 8px;
}

<MenuView
  arrow={true}
  placement="bottom-start"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="bottom-start"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="bottom-start"
      >
        <ul
          className="c-menu c-menu--down c-arrow c-arrow--tl c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 8`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-top: 8px;
}

<MenuView
  arrow={true}
  placement="bottom-end"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="bottom-end"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="bottom-end"
      >
        <ul
          className="c-menu c-menu--down c-arrow c-arrow--tr c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow renders otherwise 1`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-left: 8px;
}

<MenuView
  arrow={true}
  placement="right"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="right"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="right"
      >
        <ul
          className="c-menu c-menu--right c-arrow c-arrow--l c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders down styling if placement is provided 1`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-top: 4px;
}

<MenuView
  placement="bottom"
>
  <MenuView__MenuWrapper
    placement="bottom"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="bottom"
      >
        <ul
          className="c-menu c-menu--down c-arrow--t c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders down styling if placement is provided 2`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-top: 4px;
}

<MenuView
  placement="bottom-start"
>
  <MenuView__MenuWrapper
    placement="bottom-start"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="bottom-start"
      >
        <ul
          className="c-menu c-menu--down c-arrow--tl c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders down styling if placement is provided 3`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-top: 4px;
}

<MenuView
  placement="bottom-end"
>
  <MenuView__MenuWrapper
    placement="bottom-end"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="bottom-end"
      >
        <ul
          className="c-menu c-menu--down c-arrow--tr c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders left styling if placement is provided 1`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-right: 4px;
}

<MenuView
  placement="left"
>
  <MenuView__MenuWrapper
    placement="left"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="left"
      >
        <ul
          className="c-menu c-menu--left c-arrow--r c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders left styling if placement is provided 2`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-right: 4px;
}

<MenuView
  placement="left-start"
>
  <MenuView__MenuWrapper
    placement="left-start"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="left-start"
      >
        <ul
          className="c-menu c-menu--left c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders left styling if placement is provided 3`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-right: 4px;
}

<MenuView
  placement="left-end"
>
  <MenuView__MenuWrapper
    placement="left-end"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="left-end"
      >
        <ul
          className="c-menu c-menu--left c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders right styling if placement is provided 1`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-left: 4px;
}

<MenuView
  placement="right"
>
  <MenuView__MenuWrapper
    placement="right"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="right"
      >
        <ul
          className="c-menu c-menu--right c-arrow--l c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders right styling if placement is provided 2`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-left: 4px;
}

<MenuView
  placement="right-start"
>
  <MenuView__MenuWrapper
    placement="right-start"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="right-start"
      >
        <ul
          className="c-menu c-menu--right c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders right styling if placement is provided 3`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-left: 4px;
}

<MenuView
  placement="right-end"
>
  <MenuView__MenuWrapper
    placement="right-end"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="right-end"
      >
        <ul
          className="c-menu c-menu--right c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders up styling if placement is provided 1`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-bottom: 4px;
}

<MenuView
  placement="top"
>
  <MenuView__MenuWrapper
    placement="top"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="top"
      >
        <ul
          className="c-menu c-menu--up c-arrow--b c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders up styling if placement is provided 2`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-bottom: 4px;
}

<MenuView
  placement="top-start"
>
  <MenuView__MenuWrapper
    placement="top-start"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="top-start"
      >
        <ul
          className="c-menu c-menu--up c-arrow--bl c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders up styling if placement is provided 3`] = `
.c1.c1 {
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-bottom: 4px;
}

<MenuView
  placement="top-end"
>
  <MenuView__MenuWrapper
    placement="top-end"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        placement="top-end"
      >
        <ul
          className="c-menu c-menu--up c-arrow--br c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Renders renders animation styling correctly 1`] = `
.c0.c0 {
  position: relative;
}

.c0:focus {
  outline: none;
}

<MenuView
  animate={true}
>
  <MenuView__MenuWrapper>
    <div
      className=""
    >
      <MenuView__StyledMenuView
        animate={true}
      >
        <ul
          className="c-menu is-open c0"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Renders renders custom left animation correctly 1`] = `
.c1.c1 {
  -webkit-animation: DWTzU;
  animation: DWTzU;
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-right: 4px;
}

<MenuView
  animate={true}
  placement="left"
>
  <MenuView__MenuWrapper
    placement="left"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        animate={true}
        placement="left"
      >
        <ul
          className="c-menu c-menu--left is-open c-arrow--r c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Renders renders custom top animation correctly 1`] = `
.c1.c1 {
  -webkit-animation: dtfwqU;
  animation: dtfwqU;
  position: relative;
}

.c1:focus {
  outline: none;
}

.c0 {
  margin-bottom: 4px;
}

<MenuView
  animate={true}
  placement="top"
>
  <MenuView__MenuWrapper
    placement="top"
  >
    <div
      className="c0"
    >
      <MenuView__StyledMenuView
        animate={true}
        placement="top"
      >
        <ul
          className="c-menu c-menu--up c-arrow--b c1"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView renders RTL styling correctly 1`] = `
.c0.c0 {
  position: relative;
}

.c0:focus {
  outline: none;
}

<MenuView>
  <MenuView__MenuWrapper>
    <div
      className=""
    >
      <MenuView__StyledMenuView>
        <ul
          className="c-menu c0"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView renders default styling correctly 1`] = `
.c0.c0 {
  position: relative;
}

.c0:focus {
  outline: none;
}

<MenuView>
  <MenuView__MenuWrapper>
    <div
      className=""
    >
      <MenuView__StyledMenuView>
        <ul
          className="c-menu c0"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView renders hidden styling if provided 1`] = `
.c0.c0 {
  position: relative;
}

.c0:focus {
  outline: none;
}

<MenuView
  hidden={true}
>
  <MenuView__MenuWrapper>
    <div
      className=""
    >
      <MenuView__StyledMenuView
        hidden={true}
      >
        <ul
          className="c-menu is-hidden c0"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
          hidden={true}
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView renders small styling correctly 1`] = `
.c0.c0 {
  position: relative;
}

.c0:focus {
  outline: none;
}

<MenuView
  small={true}
>
  <MenuView__MenuWrapper>
    <div
      className=""
    >
      <MenuView__StyledMenuView
        small={true}
      >
        <ul
          className="c-menu c-menu--sm c0"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;
